sand-box-app/overlays/dev/sandbox/traefik/middleware-retry.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: retry
spec:
  retry:
    attempts: 3
