sand-box-app/overlays/dev/sandbox/traefik/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-http
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: dev-sandbox-errorpage@kubernetescrd, dev-sandbox-https-redirect@kubernetescrd, dev-sandbox-rewrite@kubernetescrd, dev-sandbox-retry@kubernetescrd
spec:
  rules:
  - host: "*.wild.govirto.com"
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
  - host: $(VC_PLATFORM_SERVICE).$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /
